<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etHoristaHora"
        android:layout_width="228dp"
        android:layout_height="0dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/etHoristaHora"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/etHoristaValor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHorista" />

    <EditText
        android:id="@+id/etHoristaValor"
        android:layout_width="229dp"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:ems="10"

        android:hint="@string/etHoristaValor"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/tvTitular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etHoristaHora" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="23dp"
        app:layout_constraintEnd_toEndOf="@+id/tvHorista"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rdHorista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdHorista"
            android:checked="true" />


        <RadioButton
            android:id="@+id/rdTitular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdTitular" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvHorista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="184dp"
        android:layout_marginBottom="23dp"
        android:hint="@string/tvHorista"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/etHoristaHora"
        app:layout_constraintStart_toStartOf="@+id/etHoristaHora"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvTitular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:text="@string/tvTitular"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/etTitularAno"
        app:layout_constraintEnd_toEndOf="@+id/etTitularAno"
        app:layout_constraintStart_toStartOf="@+id/etTitularAno"
        app:layout_constraintTop_toBottomOf="@+id/etHoristaValor" />

    <EditText
        android:id="@+id/etTitularAno"
        android:layout_width="233dp"
        android:layout_height="0dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:hint="@string/etTitularAno"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/etTitularSalario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitular" />

    <EditText
        android:id="@+id/etTitularSalario"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="54dp"
        android:ems="10"
        android:hint="@string/etTitularSalario"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/tvRes"
        app:layout_constraintStart_toStartOf="@+id/etTitularAno"
        app:layout_constraintTop_toBottomOf="@+id/etTitularAno" />

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="14dp"
        android:text="@string/btnCalc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etTitularSalario"
        app:layout_constraintStart_toStartOf="@+id/etTitularAno"
        app:layout_constraintTop_toBottomOf="@+id/tvRes" />

    <TextView
        android:id="@+id/tvRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCalc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitularSalario" />
</androidx.constraintlayout.widget.ConstraintLayout>